--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body{
 	height: 100vh; 
 	background-size: cover; 
 	background-repeat: no-repeat;
-	background-image: url(images/fondo.png);
+	background-image: url(/images/fondo.png);
 	color: white;
 }
 
